# drawing-app

./: .gitignore  CMakeLists.txt  LICENSE  assets.c  buildcommand.txt  canvas.c  main.c  shell.html
Clay/: clay_renderer_SDL3.c  clay_sdl_binding.h
docs/: drawingapp.js  drawingapp.wasm  index.html
include/: appstate.h  arena.h  assets.h  canvas.h
